=== master

* Make jdbc/mysql adapter work when using JRuby with Java 11 (jeremyevans)

* Support window function options :window, :exclude, and :frame :type=>:groups, :start, and :end on SQLite 3.28.0+ (jeremyevans)

* Make the server_block extension respect the :servers_hash Database option (jeremyevans)

* Typecast string input for json/jsonb types as JSON strings instead of parsing as JSON in the pg_json extension when Database#typecast_json_strings is set to true (jeremyevans)

* Wrap JSON primitives (string, number, true, false, nil) in the pg_json extension when Database#wrap_json_primitives is set to true (jeremyevans)

* Convert the Database :timeout option to an integer in the sqlite adapter (jeremyevans) (#1620)

* Improve performance in ado adapter using more efficient inner loop (jeremyevans)

* Improve performance in ado adapter using faster callables for type conversion (jeremyevans)

* Fix handling of decimal values in the ado adapter when using locales where the decimal separator is , and not . (jeremyevans) (#1619)

=== 5.20.0 (2019-05-01)

* Fix reversing of alter_table add_foreign_key when :type option is used (jeremyevans) (#1615)

* Switch from using instance_exec to define_method for model associations and in some plugins (jeremyevans)

* Fix Database#server_version when using mysql2 adapter with mysql driver on MariaDB 10+ database (v-kolesnikov) (#1614)

* Make one_to_one setter method handle models that use joined datasets (jeremyevans) (#1612)

* Make auto_validations plugin work with the class_table_inheritance plugin (jeremyevans) (#1611)

* Avoid use of instance_exec for PlaceholderLiteralString#with_dataset (jeremyevans)

* Recognize float unsigned database types as float (keeguon, jeremyevans) (#1609)

* Support :savepoint options to Database#{after_commit,after_rollback} for making the hooks handle savepoints (jeremyevans)

* Avoid use of instance_exec in association_dependencies plugin (jeremyevans)
